# tinycfs

./: CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  tinycfs.conf.example
.claude/: settings.json
.github/workflows/: build.yml
scripts/: post-change.sh
src/: config.rs  error.rs  lib.rs  main.rs  status.rs  syslog_layer.rs
src/cluster/: message.rs  mod.rs  transport.rs
src/consensus/: log.rs  mod.rs
src/fs/: inode.rs  mod.rs  store.rs
src/persistence/: mod.rs
src/totem/: mod.rs
